# claudeway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: release.yml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.svelte
dashboard/src/lib/: api.ts
dashboard/src/lib/components/: EmptyState.svelte  Navbar.svelte  StatCard.svelte
dashboard/src/routes/: Costs.svelte  Keys.svelte  Login.svelte  Logs.svelte  Overview.svelte  SessionDetail.svelte  Sessions.svelte
docs/superpowers/plans/: 2026-03-12-admin-dashboard.md  2026-03-12-claudeway-implementation.md  2026-03-12-plugin-system.md
docs/superpowers/specs/: 2026-03-12-admin-dashboard-design.md  2026-03-12-claudeway-http-wrapper-design.md  2026-03-12-plugin-system-design.md  2026-03-12-readme-improvement-design.md  2026-03-12-telegram-repo-selection-design.md  2026-03-12-telegram-two-way-chat-design.md
src/: admin_auth.rs  admin_models.rs  admin_stats.rs  auth.rs  claude.rs  config.rs  dashboard.rs  error.rs  logging.rs  main.rs  models.rs  plugin.rs  session.rs  startup.rs
src/handlers/: admin.rs  health.rs  mod.rs  models.rs  repos.rs  session.rs  stream.rs  task.rs
src/plugins/: mod.rs
src/plugins/cloudflare_tunnel/: mod.rs
src/plugins/dashboard/: handlers.rs  mod.rs  stats.rs
src/plugins/slack/: mod.rs
src/plugins/swagger/: mod.rs
src/plugins/telegram/: markdown.rs  mod.rs  polling.rs  repos.rs
