[package]
name = "claudeway"
version = "0.4.0"
edition = "2024"
description = "Production-grade HTTP wrapper around the Claude CLI"
license = "MIT"
repository = "https://github.com/alicanso/claudeway"
keywords = ["claude", "api", "wrapper", "axum", "llm"]
categories = ["web-programming::http-server", "command-line-utilities"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
http = "1"
dirs-next = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
rust-embed = "8"
mime_guess = "2"
toml_crate = { package = "toml", version = "0.8" }
trait-variant = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
